@@ -2,6 +2,10 @@
 VERSION 0.7.1cvs
 ================
 
+2005-05-19  Vincent Richard  <vincent@vincent-richard.net>
+
+ * messaging/imap/IMAPFolder.cpp: fixed bug in subfolders enumeration.
+
 2005-05-15  Vincent Richard  <vincent@vincent-richard.net>
 
  * messaging/serviceInfos.{hpp|cpp}: changed getAvailableProperties() to
